force-app/main/default/objects/cdcpc__RD_SizeList__c/cdcpc__RD_SizeList__c.object-meta.xml
<CustomObject>
    <label>RD SizeList</label>
    <nameField>
        <label>RD SizeList</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD SizeList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>