force-app/main/default/objects/cdcpc__RD_SizeList__c/fields/cdcpc__code__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__code__c</fullName>
    <label>code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>