force-app/main/default/objects/cdcpc__RD_SizeList__c/fields/cdcpc__Desc__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Desc__c</fullName>
    <label>Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>