force-app/main/default/objects/cdcpc__RD_SizeList__c/fields/cdcpc__DescIND__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DescIND__c</fullName>
    <label>DescIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>