force-app/main/default/objects/cdcpc__RD_SizeList__c/fields/cdcpc__mmDesc__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__mmDesc__c</fullName>
    <label>mmDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>