force-app/main/default/objects/cdcpc__RD_SizeList__c/fields/cdcpc__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>