force-app/main/default/objects/cdcpc__RD_SizeList__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Desc__c</columns>
    <columns>cdcpc__SizeValue__c</columns>
    <columns>cdcpc__code__c</columns>
    <columns>cdcpc__Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>